# fcitx5-qt

./: .formatignore  .gitignore  CMakeLists.txt  Messages.sh  README.md  clang-format.sh
.github/workflows/: check.yml
common/: fcitxflags.h
debian/: changelog  control  copyright  fcitx5-frontend-qt5.install  libfcitx5-qt-dev.install  libfcitx5-qt1.install  libfcitx5-qt1.lintian-overrides  rules  watch
po/: LINGUAS  ca.po  da.po  de.po  es.po  fcitx5-qt.pot  fr.po  he.po  ja.po  ka.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
qt4/: CMakeLists.txt
qt4/dbusaddons/: CMakeLists.txt  Fcitx5Qt4DBusAddonsConfig.cmake.in  fcitxqtconnection.cpp  fcitxqtconnection.h  fcitxqtconnection_p.h  fcitxqtcontrollerproxy.cpp  fcitxqtcontrollerproxy.h  fcitxqtdbustypes.cpp  fcitxqtdbustypes.h  fcitxqtinputcontextproxy.cpp  fcitxqtinputcontextproxy.h  fcitxqtinputcontextproxy_p.h  fcitxqtinputcontextproxyimpl.cpp  fcitxqtinputcontextproxyimpl.h  fcitxqtinputmethodproxy.cpp  fcitxqtinputmethodproxy.h  fcitxqtwatcher.cpp  fcitxqtwatcher.h  fcitxqtwatcher_p.h  gen_dbus.sh
qt4/dbusaddons/interfaces/: org.fcitx.Fcitx.Controller1.xml  org.fcitx.Fcitx.InputContext1.xml  org.fcitx.Fcitx.InputMethod1.xml
qt4/inputcontext/: CMakeLists.txt  keyserver_x11.h  main.cpp  main.h  qfcitxinputcontext.cpp  qfcitxinputcontext.h
qt5/: CMakeLists.txt
qt5/dbusaddons/: CMakeLists.txt  Fcitx5Qt5DBusAddonsConfig.cmake.in  fcitxqtconnection.cpp  fcitxqtconnection.h  fcitxqtconnection_p.h  fcitxqtcontrollerproxy.cpp  fcitxqtcontrollerproxy.h  fcitxqtdbustypes.cpp  fcitxqtdbustypes.h  fcitxqtinputcontextproxy.cpp  fcitxqtinputcontextproxy.h  fcitxqtinputcontextproxy_p.h  fcitxqtinputcontextproxyimpl.cpp  fcitxqtinputcontextproxyimpl.h  fcitxqtinputmethodproxy.cpp  fcitxqtinputmethodproxy.h  fcitxqtwatcher.cpp  fcitxqtwatcher.h  fcitxqtwatcher_p.h  gen_dbus.sh
qt5/dbusaddons/interfaces/: org.fcitx.Fcitx.Controller1.xml  org.fcitx.Fcitx.InputContext1.xml  org.fcitx.Fcitx.InputMethod1.xml
qt5/guiwrapper/: CMakeLists.txt  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wrapperapp.cpp  wrapperapp.h
qt5/immodule-probing/: CMakeLists.txt
qt5/platforminputcontext/: CMakeLists.txt  fcitx.json  fcitx4inputcontextproxy.cpp  fcitx4inputcontextproxy_p.h  fcitx4watcher.cpp  fcitx4watcher.h  fcitxcandidatewindow.cpp  fcitxcandidatewindow.h  fcitxtheme.cpp  fcitxtheme.h  font.cpp  keyserver_x11.h  main.cpp  main.h  qfcitxplatforminputcontext.cpp  qfcitxplatforminputcontext.h  qtkey.cpp  qtkey.h
qt5/quickphrase-editor/: CMakeLists.txt  batchdialog.cpp  batchdialog.h  batchdialog.ui  editor.cpp  editor.h  editor.ui  editordialog.cpp  editordialog.h  editordialog.ui  filelistmodel.cpp  filelistmodel.h  main.cpp  main.h  model.cpp  model.h  quickphrase-editor.json
qt5/widgetsaddons/: CMakeLists.txt  Fcitx5Qt5WidgetsAddonsConfig.cmake.in  fcitxqtconfiguifactory.cpp  fcitxqtconfiguifactory.h  fcitxqtconfiguifactory_p.h  fcitxqtconfiguiplugin.cpp  fcitxqtconfiguiplugin.h  fcitxqtconfiguiwidget.cpp  fcitxqtconfiguiwidget.h  fcitxqti18nhelper.h  fcitxqtkeysequencewidget.cpp  fcitxqtkeysequencewidget.h  fcitxqtkeysequencewidget_p.h  qtkeytrans.cpp  qtkeytrans.h  qtkeytransdata.h
qt6/: CMakeLists.txt
qt6/dbusaddons/: CMakeLists.txt  Fcitx5Qt6DBusAddonsConfig.cmake.in  fcitxqtcontrollerproxy.cpp  fcitxqtcontrollerproxy.h  fcitxqtdbustypes.cpp  fcitxqtdbustypes.h  fcitxqtinputcontextproxy.cpp  fcitxqtinputcontextproxy.h  fcitxqtinputcontextproxy_p.h  fcitxqtinputcontextproxyimpl.cpp  fcitxqtinputcontextproxyimpl.h  fcitxqtinputmethodproxy.cpp  fcitxqtinputmethodproxy.h  fcitxqtwatcher.cpp  fcitxqtwatcher.h  fcitxqtwatcher_p.h  gen_dbus.sh  interfaces
qt6/dbusaddons/interfaces/: org.fcitx.Fcitx.Controller1.xml
qt6/guiwrapper/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wrapperapp.cpp  wrapperapp.h
qt6/immodule-probing/: CMakeLists.txt  main.cpp
qt6/platforminputcontext/: CMakeLists.txt  fcitx4inputcontextproxy.cpp  fcitx4inputcontextproxy.h  fcitx4inputcontextproxy_p.h  fcitx4inputcontextproxyimpl.cpp  fcitx4inputcontextproxyimpl.h  fcitx4inputmethodproxy.cpp  fcitx4inputmethodproxy.h  fcitx4watcher.cpp  fcitx4watcher.h  fcitx5.json.in  fcitxcandidatewindow.cpp  fcitxcandidatewindow.h  fcitxtheme.cpp  fcitxtheme.h  font.cpp  font.h  hybridinputcontext.cpp  hybridinputcontext.h
qt6/quickphrase-editor/: editor.cpp  filelistmodel.cpp  filelistmodel.h  model.cpp  model.h
qt6/widgetsaddons/: fcitxqtconfiguifactory.cpp  fcitxqtconfiguifactory_p.h  fcitxqtkeysequencewidget.cpp
test/: testkeytrans.cpp
